--- a/index.html
+++ b/index.html
@@ -12,6 +12,90 @@
     <title>Assignment-1</title>
 </head>
 <body>
+    <section class="top">
+        <div class="top-text">
+            <h1><span class="text-color">Skip</span> <span class="text-color1">The Diet, <br> Just Eat Healthy <br> With Food Network</span> </h1>
+            <p>Imagine you don't need a diet because we provide <br> healthy and delicious food for you!</p>
+            <a href="https://www.facebook.com/mazhar.rx1" target="_blank">Order Food</a>
+        </div>
+        <div class="top-image">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+
+    <section class="mid1">
+        <div>
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="mid1-text">
+            <h1 class="text-color1">About Me</h1>
+            <p class="ptext">Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+                <a href="https://www.facebook.com/mazhar.rx1" target="_blank">Contact Me</a>
+        </div>
+    </section>
+
+    <h1 style="text-align: center ;">My recipies</h1>
+    <p style="text-align: center ;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+        Lorem Ipsum has been the industry's standard dummy text ever since the <br>
+        1500s.
+    </p>
     
+    <section class="recipies">
+        <div class="box">
+            <img src="images/food/Project Cover.jpg" alt="">
+            <h3 style="text-align: center;">Recipie Title</h3>
+            <p style="text-align: center;">Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+        </div>
+        <div class="box">
+            <img src="images/food/Project Cover1.jpg" alt="">
+            <h3 style="text-align: center;">Recipie Title</h3>
+            <p style="text-align: center;">Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+        </div>
+        <div class="box">
+            <img src="images/food/Project Cover.png" alt="">
+            <h3 style="text-align: center;">Recipie Title</h3>
+            <p style="text-align: center;">Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+        </div>
+    </section>
+
+    <section class="account">
+        <div class="account1">
+            <h1>700k</h1>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="account1">
+            <h1>2.4m</h1>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="account1">
+            <h1>100k</h1>
+            <p>Dribbble Shot Likes</p>
+        </div>
+    </section>
+
+    <section class="footer">
+
+        <h2 style="text-align: center ;">
+            <span style="color: #F1C40F; font-size: 40px ;">FOOD</span> <span style="color: #616A6B; font-size: 40px ;">NETWORK</span>
+        </h2>
+        <p style="text-align: center ; color: white;">Eat healthy to live healthy. Live healthy to live happy.</p>
+
+    </section>
 </body>
 </html>
